<resources>
    <string name="app_name">Aplicación Basica</string>
    <string name="title_activity_settings">Configuracion</string>
    <string name="setting_label" translatable="false">Settings</string>
    <string name="title_activity_details">Detalle Posicion</string>
    <string name="title_activity_dialog">Activity no FullScreen</string>
    <string name="notification_label">Notificacion</string>
    <string name="download_label">Descargar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_02" translatable="false">Fragment 02</string>
    <string name="act_fragment_frg01" translatable="false">Fragment 01</string>
    <string name="act_fragment_frg02" translatable="false">Fragment 02</string>
    <string name="btn_fragment">Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="calendar">Calendario</string>
</resources>
